--- a/lang/en.json
+++ b/lang/en.json
@@ -1,59 +1,51 @@
 {
     "cookies": [
-        "has given you a chocolate chip cookie!",
-        "has given you a soft homemade oatmeal cookie!",
-        "has given you a plain, dry, old cookie. It was the last one in the bag. Gross.",
-        "gives you a sugar cookie. What, no frosting and sprinkles? 0\/10 would not touch.",
+        "has given you a chocolate chip cookie! u like? tell tru",
+        "has given you a soft homemade oatmeal cookie! hope u no alergic fem",
+        "has given you a plain, dry, old cookie. It was the last one in the bag. Gross. AXAXAXAAXXA take pwn",
+        "gives you a sugar cookie. What, no frosting and sprinkles? 0\/10 would not touch. WTF rude u no like?",
         "gives you a chocolate chip cookie. Oh wait, those are raisins. Bleck!",
-        "gives you an enormous cookie. Poking it gives you more cookies. Weird.",
-        "gives you a fortune cookie. It reads \"Why aren't you working on any projects?\"",
-        "gives you a fortune cookie. It reads \"Give that special someone a compliment\"",
+        "gives you an enormous cookie. Poking it gives you more cookies. Weird. u like?",
+        "gives you a fortune cookie. It reads \"Why aren't you working on any projects idion?\"",
+        "gives you a fortune cookie. It reads \"Give that special someone a compliment, tell trut\"",
         "gives you a fortune cookie. It reads \"Take a risk!\"",
         "gives you a fortune cookie. It reads \"Go outside.\"",
-        "gives you a fortune cookie. It reads \"Don't forget to eat your veggies!\"",
-        "gives you a fortune cookie. It reads \"Do you even lift?\"",
-        "gives you a fortune cookie. It reads \"m808 pls\"",
+        "gives you a fortune cookie. It reads \"pls trust\"",
+        "gives you a fortune cookie. It reads \"stop nosen\"",
+        "gives you a fortune cookie. It reads \"bery good\"",
         "gives you a fortune cookie. It reads \"If you move your hips, you'll get all the ladies.\"",
-        "gives you a fortune cookie. It reads \"I love you.\"",
+        "gives you a fortune cookie. It reads \"u ultron.\"",
         "gives you a Golden Cookie. You can't eat it because it is made of gold. Dammit.",
         "gives you an Oreo cookie with a glass of milk!",
         "gives you a rainbow cookie made with love :heart:",
-        "gives you an old cookie that was left out in the rain, it's moldy.",
-        "bakes you fresh cookies, it smells amazing."
+        "gives you an old cookie that was left out in the rain, it's moldy. AXAXAXAXAXA",
+        "bakes you fresh cookies, it smells mega ultron."
     ],
     "balls": [
-        "Signs point to yes.",
-        "Yes.",
-        "Reply hazy, try again.",
-        "Without a doubt.",
-        "My sources say no.",
-        "As I see it, yes.",
-        "You may rely on it.",
-        "Concentrate and ask again.",
-        "Outlook not so good.",
-        "It is decidedly so.",
-        "Better not tell you now.",
-        "Very doubtful.",
-        "Yes - definitely.",
-        "It is certain.",
-        "Cannot predict now.",
-        "Most likely.",
-        "Ask again later.",
-        "My reply is no.",
-        "Outlook good.",
-        "Don't count on it.",
-        "Yes, in due time.",
-        "Definitely not.",
-        "You will have to wait.",
-        "I have my doubts.",
-        "Outlook so so.",
-        "Looks good to me!",
-        "Who knows?",
-        "Looking good!",
-        "Probably.",
-        "Are you kidding?",
-        "Don't bet on it.",
-        "Forget about it."
+        "y",
+        "trust",
+        "WTF?",
+        "pls trus",
+        "u no trus? pls trus",
+        "non",
+        "jepp",
+        "nosen",
+        "bery",
+        "mb",
+        "stop nosen",
+        "u serion?",
+        "yes fem",
+        "axaxaxa no fen",
+        "u need trus",
+        "i no agree",
+        "AXAXAXAXAXAXAXA",
+        "imbecil",
+        "kitty",
+        "ultron",
+        "?",
+        "moran moron",
+        "a gree",
+        "trut"
     ],
     "nodatafound": "No previous data found.",
     "currentlang": "\/me Language currently set to: %%LANGUAGE%%",
@@ -64,8 +56,8 @@
     "greyuser": "Only bouncers and up can run a bot.",
     "bouncer": "The bot can't move people when it's run as a bouncer.",
     "online": "\/me %%BOTNAME%% v%%VERSION%% online!",
-    "welcome": "\/me Welcome %%NAME%%",
-    "welcomeback": "\/me Welcome back, %%NAME%%",
+    "welcome": "\/me Welcome %%NAME%% fen",
+    "welcomeback": "\/me Welcome back, %%NAME%% fen",
     "songknown": "\/me @%%NAME%%, this song is in the DJ history.",
     "notavailable": "\/me @%%NAME%%, the song you played was not available.",
     "timelimit": "\/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
