--- a/lang/en.json
+++ b/lang/en.json
@@ -55,16 +55,16 @@
     "datarestored": "Previously stored data successfully retrieved.",
     "greyuser": "Only bouncers and up can run a bot.",
     "bouncer": "The bot can't move people when it's run as a bouncer.",
-    "online": "\/me %%BOTNAME%% v%%VERSION%% online!",
+    "online": "\/me %%BOTNAME%% v%%VERSION%% online fens!",
     "welcome": "\/me Welcome %%NAME%% fen",
     "welcomeback": "\/me Welcome back, %%NAME%% fen",
-    "songknown": "\/me @%%NAME%%, this song is in the DJ history.",
-    "notavailable": "\/me @%%NAME%%, the song you played was not available.",
+    "songknown": "\/me @%%NAME%%, this song is in the DJ history fen.",
+    "notavailable": "\/me @%%NAME%%, the song you played was not available fen.",
     "timelimit": "\/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
     "permissionownsong": "\/me :up: @%%NAME%% has permission to play their own production!",
     "isblacklisted": "\/me This track is on the %%BLACKLIST%% blacklist! Skipping...",
-    "isopen": "\/me The roulette is now open! Type !join to participate! (A game where a random participant is moved to a random position in the waitlist)",
-    "winnerpicked": "\/me A winner has been picked! @%%NAME%% to position %%POSITION%%.",
+    "isopen": "\/me Th roulette is now open fens! pls trust! Type !join to participate! (A game where a random participant is moved to a random position in the waitlist)",
+    "winnerpicked": "\/me A winner has been picked! grats fen!! @%%NAME%% to position %%POSITION%%.",
     "ball": "\/me %%NAME%%'s question was: \"%%QUESTION%%\" and %%BOTNAME%%'s response is: \"%%RESPONSE%%\"",
     "notghosting": "[%%NAME1%%] %%NAME2%% is not ghosting.",
     "ghosting": "[%%NAME1%%] %%NAME2%% is either ghosting or not here.",
@@ -78,13 +78,13 @@
     "warning1": "\/me @%%NAME%%, you have been afk for %%TIME%%, please respond within 2 minutes or you will be removed.",
     "warning2": "\/me @%%NAME%%, you will be removed due to AFK soon if you don't respond.",
     "afkremove": "\/me @%%NAME%%, you have been removed for being afk for %%TIME%%. You were at position %%POSITION%%. Chat at least once every %%MAXIMUMAFK%% minutes if you want to play a song.",
-    "caps": "\/me @%%NAME%%, unglue your capslock button please.",
-    "askskip": "\/me @%%NAME%%, don't ask for skips.",
-    "spam": "\/me @%%NAME%%, please don't spam.",
-    "roomadvertising": "\/me @%%NAME%%, don't post links to other rooms please.",
+    "caps": "\/me @%%NAME%%, unglue your capslock button please, idion.",
+    "askskip": "\/me @%%NAME%%, don't ask for skips, bichh kid.",
+    "spam": "\/me @%%NAME%%, please don't spam, nosen idion.",
+    "roomadvertising": "\/me @%%NAME%%, don't post links to other rooms please, u piece of shit nosen kid.",
     "adfly": "\/me @%%NAME%%, please change your autowoot program. We suggest PlugCubed: http:\/\/plugcubed.net\/",
     "validgiftags": "\/me [@%%NAME%%] http:\/\/i.giphy.com\/%%ID%%.gif [Tags: %%TAGS%%]",
-    "invalidgiftags": "\/me [@%%NAME%%] Invalid tags, try something different. [Tags: %%TAGS%%]",
+    "invalidgiftags": "\/me [@%%NAME%%] i no can find gif of this tag fen, sry.. [Tags: %%TAGS%%]",
     "validgifrandom": "\/me [@%%NAME%%] http:\/\/i.giphy.com\/%%ID%%.gif [Random GIF]",
     "invalidgifrandom": "\/me [@%%NAME%%] Invalid request, try again.",
     "invalidtime": "\/me [@%%NAME%%] Invalid time specified.",
@@ -148,13 +148,13 @@
     "eta": "\/me @%%NAME%%, you are position %%POSITION%% in the waitlist and will reach the booth in approximately %%TIME%%.",
     "facebook": "\/me Like us on facebook: %%LINK%%",
     "starterhelp": "\/me This image will get you started on plug: %%LINK%%",
-    "roulettejoin": "@%%NAME%% joined the roulette! (!leave if you regret it)",
+    "roulettejoin": "@%%NAME%% joined th roulette! (!leave if you regret it or if u scared bichh kid)",
     "jointime": "\/me [@%%NAMEFROM%%] @%%USERNAME%% has been in the room for %%TIME%%.",
     "kickrank": "\/me [@%%NAME%%] you can't kick users with an equal or higher rank than you!",
     "kick": "\/me [@%%NAME%%], @%%USERNAME%% you are being kicked from the community for %%TIME%% minutes.",
     "kill": "\/me Shutting down.",
     "logout": "\/me [@%%NAME%%] Logging out %%BOTNAME%%",
-    "rouletteleave": "\/me @%%NAME%% left the roulette!",
+    "rouletteleave": "\/me @%%NAME%% left the roulette! lol he scared!!",
     "songlink": "\/me [@%%NAME%%] Link to current song: %%LINK%%",
     "usedlockskip": "\/me [%%NAME%% used lockskip]",
     "usedskip": "\/me [%%NAME%% used skip]",
