--- a/lang/en.json
+++ b/lang/en.json
@@ -201,6 +201,6 @@
     "odincd": "\/me @%%NAME%% Odin may try to listen to your begging in %%TIME%% minutes.",
     "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
     "odinWorthy": "\/me @%%NAME%% ODIN GRANTS YOU ENTRY TO VALHALA, congratulations!",
-    "odinNotWorthy": "\/me @%%NAME%%, YOU ARE UNWORTHY OF THE MIGHT OF GUNGNIR!",
+    "odinNotWorthy": "\/me @%%NAME%%, YOU ARE UNWORTHY OF THE MIGHT OF GUNGNIR! http://vocaroo.com/i/s1aKwhMdoKMT",
     "thorNotWorthy": "\/me @%%NAME%% you're not worthy of the hammer."
 }
