--- a/lang/en.json
+++ b/lang/en.json
@@ -196,8 +196,8 @@
     "youtube": "\/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
     "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M.",
     "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
-    "odinNotClose": "\/me @%%NAME%%, odin laughs at you! Absolutely UNWORTHY!",
-    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes.",
+    "odinNotClose": "\/me @%%NAME%%, odin laughs at you! Absolutely UNWORTHY! https://hydra-media.cursecdn.com/smite.gamepedia.com/6/67/Vox_God_Odin_Laugh_a.ogg",
+    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes. https://hydra-media.cursecdn.com/smite.gamepedia.com/c/ce/Thor_Kill_Streak_2.ogg",
     "odincd": "\/me @%%NAME%% Odin may try to listen to your begging in %%TIME%% minutes.",
     "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
     "odinWorthy": "\/me @%%NAME%% ODIN GRANTS YOU ENTRY TO VALHALA, congratulations!",
