--- a/lang/en.json
+++ b/lang/en.json
@@ -2,7 +2,7 @@
     "cookies": [
         "has given you a chocolate chip cookie! u like? tell tru",
         "has given you a soft homemade oatmeal cookie! hope u no alergic fem",
-        "has given you a plain, dry, old cookie. It was the last one in the bag. Gross. AXAXAXAAXXA take pwn",
+        "has given you a plain, dry, old cookie. It was th last one in th bag. Gross. AXAXAXAAXXA take pwn",
         "gives you a sugar cookie. What, no frosting and sprinkles? 0\/10 would not touch. WTF rude u no like?",
         "gives you a chocolate chip cookie. Oh wait, those are raisins. Bleck!",
         "gives you an enormous cookie. Poking it gives you more cookies. Weird. u like?",
@@ -13,13 +13,29 @@
         "gives you a fortune cookie. It reads \"pls trust\"",
         "gives you a fortune cookie. It reads \"stop nosen\"",
         "gives you a fortune cookie. It reads \"bery good\"",
-        "gives you a fortune cookie. It reads \"If you move your hips, you'll get all the ladies.\"",
+        "gives you a fortune cookie. It reads \"If you move your hips, you'll get all th ladies.\"",
         "gives you a fortune cookie. It reads \"u ultron.\"",
         "gives you a Golden Cookie. You can't eat it because it is made of gold. Dammit.",
         "gives you an Oreo cookie with a glass of milk!",
         "gives you a rainbow cookie made with love :heart:",
-        "gives you an old cookie that was left out in the rain, it's moldy. AXAXAXAXAXA",
+        "gives you an old cookie that was left out in th rain, it's moldy. AXAXAXAXAXA",
         "bakes you fresh cookies, it smells mega ultron."
+    ],
+    "molnars": [
+        "HEIL MOLNAR!! http://i.imgur.com/uLthNoe.jpg",
+        "MOLNAR SWAG http://i.imgur.com/PsIewSB.gifv",
+        ":tongue: http://i.imgur.com/7hOWh7n.gif :tongue:",
+        "A WILD MOLNAR HAS APPEARED! http://i.imgur.com/CmqCb9P.gif",
+        "PARTY HARD http://i.imgur.com/cCBWAin.gif WOOOOOOOOO",
+        "MOLNAR VISION http://i.imgur.com/LNU4poe.jpg",
+        "http://i.imgur.com/i6pi2wK.jpg think different",
+        "WOOOOOOOOOOO http://i.imgur.com/r5E0UjZ.jpg",
+        "AAAAAAA http://i.imgur.com/NED7nOX.jpg",
+        "I am art http://i.imgur.com/nYK8lye.jpg",
+        "OUR LORD AND SAVIOR http://i.imgur.com/UmlPb3E.jpg",
+        "OUR LORD AND SAVIOR http://i.imgur.com/UmlPb3E.jpg",
+        "HOLY ASCENDANT LORD AND SAVIOR MOLNAR KRISZTIAN http://i.imgur.com/OrjzMGa.jpg",
+        "HOLY ASCENDANT LORD AND SAVIOR MOLNAR KRISZTIAN http://i.imgur.com/OrjzMGa.jpg"  
     ],
     "balls": [
         "y",
@@ -49,30 +65,30 @@
     ],
     "nodatafound": "No previous data found.",
     "currentlang": "\/me Language currently set to: %%LANGUAGE%%",
-    "langerror": "\/me The language you've selected isn't available. Please visit %%LINK%% to find a list of languages available.",
+    "langerror": "\/me Th language you've selected isn't available. Please visit %%LINK%% to find a list of languages available.",
     "langset": "\/me Language now set to: %%LANGUAGE%%",
     "retrievingdata": "Retrieving previously stored data.",
     "datarestored": "Previously stored data successfully retrieved.",
     "greyuser": "Only bouncers and up can run a bot.",
-    "bouncer": "The bot can't move people when it's run as a bouncer.",
+    "bouncer": "Th bot can't move people when it's run as a bouncer.",
     "online": "\/me %%BOTNAME%% v%%VERSION%% online fens!",
     "welcome": "\/me Welcome %%NAME%% fen",
     "welcomeback": "\/me Welcome back, %%NAME%% fen",
-    "songknown": "\/me @%%NAME%%, this song is in the DJ history fen.",
-    "notavailable": "\/me @%%NAME%%, the song you played was not available fen.",
+    "songknown": "\/me @%%NAME%%, this song is in th DJ history fen.",
+    "notavailable": "\/me @%%NAME%%, th song you played was not available fen.",
     "timelimit": "\/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
     "permissionownsong": "\/me :up: @%%NAME%% has permission to play their own production!",
-    "isblacklisted": "\/me This track is on the %%BLACKLIST%% blacklist! Skipping...",
+    "isblacklisted": "\/me This track is on th %%BLACKLIST%% blacklist! Skipping...",
     "isopen": "\/me Th roulette is now open fens! pls trust! Type !join to participate! (A game where a random participant is moved to a random position in the waitlist)",
     "winnerpicked": "\/me A winner has been picked! grats fen!! @%%NAME%% to position %%POSITION%%.",
     "ball": "\/me %%NAME%%'s question was: \"%%QUESTION%%\" and %%BOTNAME%%'s response is: \"%%RESPONSE%%\"",
     "notghosting": "[%%NAME1%%] %%NAME2%% is not ghosting.",
     "ghosting": "[%%NAME1%%] %%NAME2%% is either ghosting or not here.",
-    "alreadyadding": "\/me User is already being added! Changed the desired position to %%POSITION%%.",
-    "adding": "\/me Added @%%NAME%% to the queue. Current queue: %%POSITION%%.",
+    "alreadyadding": "\/me User is already being added! Changed th desired position to %%POSITION%%.",
+    "adding": "\/me Added @%%NAME%% to th queue. Current queue: %%POSITION%%.",
     "usernotfound": "\/me User not found.",
     "notdisconnected": "\/me @%%NAME%% did not disconnect during my time here.",
-    "noposition": "\/me No last position known. The waitlist needs to update at least once to register a user's last position.",
+    "noposition": "\/me No last position known. Th waitlist needs to update at least once to register a user's last position.",
     "toolongago": "\/me @%%NAME%%'s last disconnect (DC or leave) was too long ago: %%TIME%%.",
     "valid": "\/me @%%NAME%% disconnected %%TIME%% ago and should be at position %%POSITION%%.",
     "warning1": "\/me @%%NAME%%, you have been afk for %%TIME%%, please respond within 2 minutes or you will be removed.",
@@ -105,7 +121,7 @@
     "afklimit": "AFK limit",
     "autodisable": "autodisable",
     "autoskip": "autoskip",
-    "newblacklisted": "\/me [@%%NAME%%] This track belongs on the %%BLACKLIST%% blacklist! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
+    "newblacklisted": "\/me [@%%NAME%%] This track belongs on th %%BLACKLIST%% blacklist! [ %%AUTHOR%% - %%TITLE%% - %%MID%% ]",
     "blinfo": "[@%%NAME%%] Blacklist Info - author: %%AUTHOR%%, title: %%TITLE%%, mid: %%SONGID%%",
     "blacklist": "blacklist",
     "cycleguard": "cycleguard",
@@ -121,51 +137,51 @@
     "etarestriction": "eta restriction",
     "voteskip": "voteskip",
     "voteskiplimit": "\/me [@%%NAME%%] Voteskip limit is currently set to %%LIMIT%% mehs.",
-    "voteskipexceededlimit": "\/me @%%NAME%%, your song has exceeded the voteskip limit (%%LIMIT%% mehs).",
-    "voteskipinvalidlimit": "\/me [@%%NAME%%] Invalid voteskip limit, please try again using a number to signify the number of mehs.",
+    "voteskipexceededlimit": "\/me @%%NAME%%, your song has exceeded th voteskip limit (%%LIMIT%% mehs).",
+    "voteskipinvalidlimit": "\/me [@%%NAME%%] Invalid voteskip limit, please try again using a number to signify th number of mehs.",
     "voteskipsetlimit": "\/me [@%%NAME%%] Voteskip limit set to %%LIMIT%%.",
-    "activeusersintime": "\/me [@%%NAME%%] There have been %%AMOUNT%% users chatting in the past %%TIME%% minutes.",
+    "activeusersintime": "\/me [@%%NAME%%] There have been %%AMOUNT%% users chatting in th past %%TIME%% minutes.",
     "maximumafktimeset": "\/me [@%%NAME%%] Maximum afk duration set to %%TIME%% minutes.",
-    "afkstatusreset": "\/me [@%%NAME%%] Reset the afk status of @%%USERNAME%%.",
+    "afkstatusreset": "\/me [@%%NAME%%] Reset th afk status of @%%USERNAME%%.",
     "inactivefor": "\/me [@%%NAME%%] @%%USERNAME%% has been inactive for %%TIME%%.",
     "inactivelonger": "\/me [@%%NAME%%] @%%USERNAME%% has been inactive longer than %%BOTNAME%%'s been online.",
     "autowoot": "\/me We recommend PlugCubed for autowooting: http:\/\/plugcubed.net\/",
-    "brandambassador": "\/me A Brand Ambassador is the voice of the plug.dj users. They promote events, engage the community and share the plug.dj message around the world. For more info: https:\/\/plug.dj\/ba",
+    "brandambassador": "\/me A Brand Ambassador is th voice of th plug.dj users. They promote events, engage th communitee and share th plug.dj message around th world. For more info: https:\/\/plug.dj\/ba",
     "bouncerplusrank": "\/me [@%%NAME%%] You have to be manager or up to enable Bouncer+.",
-    "chatcleared": "\/me [@%%NAME%%] Cleared the chat.",
-    "deletechat": "\/me [@%%NAME%%] Cleared the chat of %%USERNAME%%.",
+    "chatcleared": "\/me [@%%NAME%%] Cleared th chat.",
+    "deletechat": "\/me [@%%NAME%%] Cleared th chat of %%USERNAME%%.",
     "commandslink": "\/me %%BOTNAME%% commands: %%LINK%%",
     "eatcookie": "\/me eats a cookie.",
     "nousercookie": "\/me who %%NAME%%? he no here...stop nosen!! how gived cookied to someone not here?",
     "selfcookie": "\/me @%%NAME%%, stop nosen!! u try to give cookie to yr self? wtf? ultron greed u, big shame on u, why u no share with othed?",
     "cookie": "\/me @%%NAMETO%%, %%NAMEFROM%% %%COOKIE%%",
-    "cycleguardtime": "\/me [@%%NAME%%] The cycleguard is set to %%TIME%% minute(s).",
+    "cycleguardtime": "\/me [@%%NAME%%] Th cycleguard is set to %%TIME%% minute(s).",
     "dclookuprank": "\/me [@%%NAME%%] Only bouncers and above can do a lookup for others.",
     "emojilist": "\/me Emoji list: %%LINK%%",
-    "notinwaitlist": "\/me @%%NAME%%, you are not on the waitlist.",
+    "notinwaitlist": "\/me @%%NAME%%, you are not on th waitlist.",
     "youarenext": "\/me @%%NAME%%, you are DJing after this song.",
     "youaredj": "\/me @%%NAME%%, you are currently DJing.",
-    "eta": "\/me @%%NAME%%, you are position %%POSITION%% in the waitlist and will reach the booth in approximately %%TIME%%.",
+    "eta": "\/me @%%NAME%%, you are position %%POSITION%% in th waitlist and will reach th booth in approximately %%TIME%%.",
     "facebook": "\/me Like us on facebook: %%LINK%%",
     "starterhelp": "\/me This image will get you started on plug: %%LINK%%",
-    "roulettejoin": "@%%NAME%% joined th roulette! (!leave if you regret it or if u scared bichh kid)",
-    "jointime": "\/me [@%%NAMEFROM%%] @%%USERNAME%% has been in the room for %%TIME%%.",
+    "roulettejoin": "@%%NAME%% joined th roulette! (!leave if you regret it or if u scared b1tchkid)",
+    "jointime": "\/me [@%%NAMEFROM%%] @%%USERNAME%% has been in th room for %%TIME%%.",
     "kickrank": "\/me [@%%NAME%%] you can't kick users with an equal or higher rank than you!",
-    "kick": "\/me [@%%NAME%%], @%%USERNAME%% you are being kicked from the community for %%TIME%% minutes.",
+    "kick": "\/me [@%%NAME%%], @%%USERNAME%% you are being kicked from th community for %%TIME%% minutes.",
     "kill": "\/me Shutting down.",
     "logout": "\/me [@%%NAME%%] Logging out %%BOTNAME%%",
-    "rouletteleave": "\/me @%%NAME%% left the roulette! lol he scared!!",
+    "rouletteleave": "\/me @%%NAME%% left th roulette! lol he scared!!",
     "songlink": "\/me [@%%NAME%%] Link to current song: %%LINK%%",
     "usedlockskip": "\/me [%%NAME%% used lockskip]",
     "usedskip": "\/me [%%NAME%% used skip]",
     "skippos": "\/me [@%%NAME%%] DJs will now be moved to position %%POSITION%% when skipped.",
-    "lockguardtime": "\/me [@%%NAME%%] The lockguard is set to %%TIME%% minute(s).",
-    "maxlengthtime": "\/me [@%%NAME%%] The maximum song duration is set to %%TIME%% minutes.",
+    "lockguardtime": "\/me [@%%NAME%%] Th lockguard is set to %%TIME%% minute(s).",
+    "maxlengthtime": "\/me [@%%NAME%%] Th maximum song duration is set to %%TIME%% minutes.",
     "motdset": "\/me MotD set to:  %%MSG%%",
     "motdintervalset": "\/me MotD interval set to %%INTERVAL%%.",
     "currentbotname": "\/me Bot name currently set to: %%BOTNAME%%",
     "botnameset": "\/me Bot name now set to: %%BOTNAME%%",
-    "addbotwaitlist": "\/me @%%NAME%%, don't try to add me to the waitlist, please.",
+    "addbotwaitlist": "\/me @%%NAME%%, don't try to add me to th waitlist, please.",
     "move": "\/me [%%NAME%% used move]",
     "mutednotime": "\/me [@%%NAME%%] Muted @%%USERNAME%%.",
     "mutedmaxtime": "\/me [@%%NAME%%] You can only mute for maximum %%TIME%% minutes.",
@@ -175,32 +191,32 @@
     "oplist": "\/me OP list: %%LINK%%",
     "pong": "\/me Pong!",
     "reload": "\/me Be right back.",
-    "removenotinwl": "\/me [@%%NAME%%] Specified user @%%USERNAME%% is not in the waitlist.",
-    "roomrules": "\/me Please find the room rules here: %%LINK%%",
+    "removenotinwl": "\/me [@%%NAME%%] Specified user @%%USERNAME%% is not in th waitlist.",
+    "roomrules": "\/me Please find th room rules here: %%LINK%%",
     "sessionstats": "\/me [@%%NAME%%] Total woots: %%WOOTS%%, total mehs: %%MEHS%%, total grabs: %%GRABS%%.",
     "forceskip": "\/me [%%NAME%% used forceskip]",
     "madeby": "\/me This bot was made by %%NAME%%.",
     "activefor": "I have been active for %%TIME%%.",
     "swapinvalid": "\/me [@%%NAME%%] Invalid user specified. (No names with spaces!)",
-    "swapwlonly": "\/me [@%%NAME%%] Please only swap users that are in the waitlist!",
+    "swapwlonly": "\/me [@%%NAME%%] Please only swap users that are in th waitlist!",
     "swapping": "\/me Swapping %%NAME1%% with %%NAME2%%.",
-    "genres": "\/me Please find the permissible room genres here: %%LINK%%",
-    "notbanned": "\/me [@%%NAME%%] The user was not banned.",
+    "genres": "\/me Please find th permissible room genres here: %%LINK%%",
+    "notbanned": "\/me [@%%NAME%%] Th user was not banned.",
     "unmutedeveryone": "\/me [@%%NAME%%] Unmuted everyone.",
     "unmuteeveryonerank": "\/me [@%%NAME%%] Only managers and up can unmute everyone at once.",
     "notmuted": "\/me [@%%NAME%%] that user wasn't muted.",
     "unmuterank": "\/me [@%%NAME%%] You can't unmute persons with an equal or higher rank than you.",
-    "commandscd": "\/me [@%%NAME%%] The cooldown for commands by users is now set to %%TIME%% seconds.",
+    "commandscd": "\/me [@%%NAME%%] Th cooldown for commands by users is now set to %%TIME%% seconds.",
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w\/m): %%RATIO%%.",
     "website": "\/me Please visit our website: %%LINK%%",
     "youtube": "\/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
     "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M.",
-    "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
+    "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to th hammer!",
     "odinNotClose": "\/me @%%NAME%%, odin laughs at you! Absolutely UNWORTHY! https://hydra-media.cursecdn.com/smite.gamepedia.com/6/67/Vox_God_Odin_Laugh_a.ogg",
-    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes. https://hydra-media.cursecdn.com/smite.gamepedia.com/c/ce/Thor_Kill_Streak_2.ogg",
+    "thorcd": "\/me @%%NAME%% you can try to lift th hammer in %%TIME%% minutes. https://hydra-media.cursecdn.com/smite.gamepedia.com/c/ce/Thor_Kill_Streak_2.ogg",
     "odincd": "\/me @%%NAME%% Odin may try to listen to your begging in %%TIME%% minutes.",
-    "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
+    "thorWorthy": "\/me @%%NAME%% you're worthy of th hammer :hammer:, congratulations!",
     "odinWorthy": "\/me @%%NAME%% ODIN GRANTS YOU ENTRY TO VALHALA, congratulations!",
-    "odinNotWorthy": "\/me @%%NAME%%, YOU ARE UNWORTHY OF THE MIGHT OF GUNGNIR! http://vocaroo.com/i/s1aKwhMdoKMT",
-    "thorNotWorthy": "\/me @%%NAME%% you're not worthy of the hammer."
+    "odinNotWorthy": "\/me @%%NAME%%, YOU ARE UNWORTHY OF TH MIGHT OF GUNGNIR! http://vocaroo.com/i/s1aKwhMdoKMT",
+    "thorNotWorthy": "\/me @%%NAME%% you're not worthy of th hammer."
 }
