--- a/lang/en.json
+++ b/lang/en.json
@@ -172,15 +172,17 @@
     "deletechat": "\/me [@%%NAME%%] Cleared th chat of %%USERNAME%%.",
     "commandslink": "\/me %%BOTNAME%% commands: %%LINK%%",
     "eatcookie": "\/me eats a cookie.",
+    "eatnosen": "\/me who u want me to stop their nosen? gimmie name pls",
     "eattrust": "\/me SK OceBot needs a name of the person you require trust analysis from. Please specify.",
     "nousercookie": "\/me who %%NAME%%? he no here...stop nosen!! how gived cookied to someone not here?",
-    "noNosen": "\/me @%%NAMEFROM%% u are nosen u know why? cuz %%NAMETO%% is no here idion",
+    "noNosen": "\/me stop nosen...u give me wrong name... %%NAME%% no here... ",
     "noTrust": "\/me SK OceBot cannot analyze the trust of %%NAME%% as this person is not here",
     "selfcookie": "\/me @%%NAME%%, stop nosen!! u try to give cookie to yr self? wtf? ultron greed u, big shame on u, why u no share with othed?",
     "selfTrust": "\/me @%%NAME%%, SK OceBot's analysis for your self trust: http://i.imgur.com/iMWRH28.png",
     "selfNosen": "\/me @%%NAME%%, u are 100% nosen... u try asking SK OceBot if u urself are nosen? ofc u are!! b1tchkid!!",
     "cookie": "\/me @%%NAMETO%%, %%NAMEFROM%% %%COOKIE%%",
     "trust": "\/me @%%NAMETO%% %%TRUST%%",
+    "nosen": "\/me  hey @%%NAMETO%%, %%NOSEN%%",
     "molnar": "\/me %%MOLNARZZ%%",
     "cycleguardtime": "\/me [@%%NAME%%] Th cycleguard is set to %%TIME%% minute(s).",
     "dclookuprank": "\/me [@%%NAME%%] Only bouncers and above can do a lookup for others.",
