--- a/lang/en.json
+++ b/lang/en.json
@@ -50,6 +50,16 @@
         "WOOOOOOOOOOO http://i.imgur.com/r5E0UjZ.jpg",
         "AAAAAAA http://i.imgur.com/NED7nOX.jpg",
         "I am art http://i.imgur.com/nYK8lye.jpg",
+        "MOLNAR WILL BE BACK http://i.imgur.com/ROimk5X.jpg",
+        "MOLNAR TAKES PITY ON LOW ELO TRASH BROZE KITTIES http://i.imgur.com/bVbHuB9.jpg",
+        "PEN PINEAPPLE MOLNAR PEN http://i.imgur.com/R2DSUWs.jpg",
+        "MOLNAR WILL FIGHT YOU http://i.imgur.com/2ENzA2A.jpg",
+        "MOLNAR WILL SNIPE YOU http://i.imgur.com/68i7DkU.jpg",
+        "KURI KURI http://i.imgur.com/BDxIuo6.jpg",
+        "PRAISE MOLNAR http://i.imgur.com/XTiQMYv.png",
+        "AXAXAXAXAXAXAXAXA MOLNAR LAUGHS AT YOU http://i.imgur.com/0EeucA8.jpg",
+        "THUG LIFE http://i.imgur.com/bxrEglT.jpg",
+        "HOW TO MAKE TSUNAMI http://i.imgur.com/to785i5.gif",
         "OUR LORD AND SAVIOR http://i.imgur.com/UmlPb3E.jpg",
         "OUR LORD AND SAVIOR http://i.imgur.com/UmlPb3E.jpg",
         "HOLY ASCENDANT LORD AND SAVIOR MOLNAR KRISZTIAN http://i.imgur.com/OrjzMGa.jpg",
