--- a/lang/en.json
+++ b/lang/en.json
@@ -22,6 +22,23 @@
         "bakes you fresh cookies, it smells mega ultron."
     ],
     
+     "babymonkeys": [
+        "baby monkey saying hi https://vid.me/Qyth",
+        "baby monkey eating!! https://vid.me/NbYg",
+        "flake?! he no want flake :( https://vid.me/wejK",
+        "he no like walnut :S https://vid.me/5HWQ",
+        "baby monkey enjoying grape https://vid.me/NbYg",
+        "he eat grape!! https://vid.me/NbYg  u like? he likes"
+    ],
+    
+       "memes": [
+        "http://i.imgur.com/4VvDlwi.png",
+        "http://i.imgur.com/aGCRKcm.jpg",
+        "http://i.imgur.com/PkJhDCZ.png"
+    ],
+    
+    
+    
      "trusts": [
         ", your trust analysis reading according to SK OceBot is: NO TRUST",
         ", your trust analysis reading according to SK OceBot is: 10% trust onlee",
