--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
         "has given you a plain, dry, old cookie. It was th last one in th bag. Gross. AXAXAXAAXXA take pwn",
         "gives you a sugar cookie. What, no frosting and sprinkles? 0\/10 would not touch. WTF rude u no like?",
         "gives you a chocolate chip cookie. Oh wait, those are raisins. Bleck!",
+        "gives you the perfect cookie :cookie: ...WOW!!",
         "gives you an enormous cookie. Poking it gives you more cookies. Weird. u like?",
         "gives you a fortune cookie. It reads \"Why aren't you working on any projects idion?\"",
         "gives you a fortune cookie. It reads \"Give that special someone a compliment, tell trut\"",
@@ -13,12 +14,13 @@
         "gives you a fortune cookie. It reads \"pls trust\"",
         "gives you a fortune cookie. It reads \"stop nosen\"",
         "gives you a fortune cookie. It reads \"bery good\"",
-        "gives you a fortune cookie. It reads \"If you move your hips, you'll get all th ladies.\"",
+        "gives you a fortune cookie. It reads \"If you move your hips, you'll get all th sex ladies.\"",
         "gives you a fortune cookie. It reads \"u ultron.\"",
         "gives you a Golden Cookie. You can't eat it because it is made of gold. Dammit.",
         "gives you an Oreo cookie with a glass of milk!",
         "gives you a rainbow cookie made with love :heart:",
         "gives you an old cookie that was left out in th rain, it's moldy. AXAXAXAXAXA",
+        "gives you a chocolate cookie! How nice of them!! oh wait no it's a turd LOL :poop: unlucky fen",
         "bakes you fresh cookies, it smells mega ultron."
     ],
     
