--- a/lang/en.json
+++ b/lang/en.json
@@ -24,6 +24,75 @@
         "bakes you fresh cookies, it smells mega ultron."
     ],
     
+    "WTF": [
+        "http://i.imgur.com/yb4DObe.jpg",
+        "http://i.imgur.com/CVX1oke.jpg",
+        "http://i.imgur.com/i8t6tlI.jpg",
+        "http://i.imgur.com/lHo60Ci.jpg",
+        "http://i.imgur.com/vufjQDX.jpg",
+        "http://i.imgur.com/9riWRMU.jpg",
+        "http://i.imgur.com/QLwHSiV.jpg",
+        "http://i.imgur.com/m2fD7qP.jpg",
+        "http://i.imgur.com/x5FK2m3.jpg",
+        "http://i.imgur.com/t5p0a8v.jpg",
+        "http://i.imgur.com/ndnOLAF.jpg",
+        "http://i.imgur.com/EvZX21B.jpg",
+        "http://i.imgur.com/JbuikIY.jpg",
+        "http://i.imgur.com/PRbyFv5.jpg",
+        "http://i.imgur.com/vvZdgAD.jpg",
+        "http://i.imgur.com/jHkV1rh.jpg",
+        "http://i.imgur.com/PLcpiSu.jpg",
+        "http://i.imgur.com/7oYZoav.jpg",
+        "http://i.imgur.com/b5AEfAR.jpg",
+        "http://i.imgur.com/Mn8vGjI.jpg",
+        "http://i.imgur.com/L3XD9ZN.jpg",   
+        "http://i.imgur.com/FS9meMN.jpg",
+        "http://i.imgur.com/bqqleE2.jpg",
+        "http://i.imgur.com/40Tlz6i.jpg",
+        "http://i.imgur.com/XPTVYuX.jpg",
+        "http://i.imgur.com/reI5658.jpg",
+        "http://i.imgur.com/HqbiBxG.jpg",
+        "http://i.imgur.com/qm7KjB4.jpg",
+        "http://i.imgur.com/kQVjV3p.jpg",
+        "http://i.imgur.com/c4vQlur.jpg",
+        "http://i.imgur.com/tcMdEcb.jpg",
+        "http://i.imgur.com/gb7YwoU.jpg",
+        "http://i.imgur.com/ehZOAib.jpg",
+        "http://i.imgur.com/cwatvUu.jpg",
+        "http://i.imgur.com/UdLGGV4.jpg",
+        "http://i.imgur.com/2mFSZQw.jpg",
+        "http://i.imgur.com/SaUBGGH.jpg",
+        "http://i.imgur.com/TJmYLFy.jpg",
+        "http://i.imgur.com/0yzhuJU.jpg",
+        "http://i.imgur.com/z3EIPcI.jpg",
+        "http://i.imgur.com/PGYReTy.jpg",
+        "http://i.imgur.com/mGNwEyb.jpg",
+        "http://i.imgur.com/gBDyypM.jpg",
+        "http://i.imgur.com/DLKwVHN.jpg",
+        "http://i.imgur.com/paFD9aA.jpg",
+        "http://i.imgur.com/bdjMCwG.jpg",
+        "http://i.imgur.com/Aj1IrW6.jpg",
+        "http://i.imgur.com/10FwfT6.jpg",
+        "http://i.imgur.com/bJs6T2L.jpg",
+        "http://i.imgur.com/1iZPWtG.jpg",
+        "http://i.imgur.com/WFYIePU.jpg",
+        "http://i.imgur.com/X8FqpQm.jpg",
+        "http://i.imgur.com/jIm6fZ3.jpg",
+        "http://i.imgur.com/lcqlDsG.jpg",
+        "http://i.imgur.com/doErF2U.jpg",
+        "http://i.imgur.com/kPGb26s.jpg",
+        "http://i.imgur.com/uCqHo56.gif",
+        "http://i.imgur.com/scdYpuX.jpg",
+        "http://i.imgur.com/wFDZGwI.jpg",
+        "http://i.imgur.com/L9sCaVq.jpg",
+        "http://i.imgur.com/Yq1XhBW.gifv",
+        "http://i.imgur.com/VrGtMOc.jpg",
+        "http://i.imgur.com/9Vj4xaj.gif",
+        "http://i.imgur.com/75Bdydi.gifv",
+        "http://i.imgur.com/hsMf9nE.jpg",
+        "http://i.imgur.com/0RGhy0B.gifv"
+    ],
+    
      "babymonkeys": [
         "baby monkey saying hi https://vid.me/Qyth",
         "baby monkey eating!! https://vid.me/NbYg",
@@ -199,7 +268,7 @@
     "bouncerplusrank": "\/me [@%%NAME%%] You have to be manager or up to enable Bouncer+.",
     "chatcleared": "\/me [@%%NAME%%] Cleared th chat.",
     "deletechat": "\/me [@%%NAME%%] Cleared th chat of %%USERNAME%%.",
-    "commandslink": "\/me original %%BOTNAME%% commands: %%LINK%% - new commands: !molnar, !odin, !thor, !trust, !nosen, !babymonkey, !meme, and !parrot",
+    "commandslink": "\/me original %%BOTNAME%% commands: %%LINK%% - new commands: !molnar, !odin, !thor, !trust, !nosen, !babymonkey, !meme, !parrot, and !wtf",
     "eatcookie": "\/me eats a cookie.",
     "eatnosen": "\/me who u want me to stop their nosen? gimmie name pls",
     "eattrust": "\/me SK OceBot needs a name of the person you require trust analysis from. Please specify.",
