--- a/lang/en.json
+++ b/lang/en.json
@@ -283,6 +283,7 @@
     "nosen": "\/me  hey @%%NAMETO%%, %%NOSEN%%",
     "molnar": "\/me %%MOLNARZZ%%",
     "meme": "\/me %%MAYMAY%%",
+    "wtf": "\/me %%WAT%%",
     "babymonkey": "\/me %%MANKEYZZ%%",
     "cycleguardtime": "\/me [@%%NAME%%] Th cycleguard is set to %%TIME%% minute(s).",
     "dclookuprank": "\/me [@%%NAME%%] Only bouncers and above can do a lookup for others.",
