--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,16 @@
 {
     "cookies": [
         "has given you a chocolate chip cookie! u like? tell tru",
+        "has given you a burned cookie! ouch! it's hot and hurts to hold! it's lit fam :fire: ",
         "has given you a soft homemade oatmeal cookie! hope u no alergic fem",
+        "has given you a bag of fresh cookies :grin:!! oh no!! a gypsy stole them and ran off :running: :sob:!!",
+        "has given you an LCD laced cookie!! woah!! you're tripping balls!! http://i.imgur.com/zQcyDUx.gif",
         "has given you a plain, dry, old cookie. It was th last one in th bag. Gross. AXAXAXAAXXA take pwn",
         "gives you a sugar cookie. What, no frosting and sprinkles? 0\/10 would not touch. WTF rude u no like?",
         "gives you a chocolate chip cookie. Oh wait, those are raisins. Bleck!",
         "gives you the perfect cookie :cookie: ...WOW!!",
+        "gives you a frozen cookie! it hurts to bite :(",
+        "gives you a weed cookie! http://i.imgur.com/blNFQ06.jpg",
         "gives you an enormous cookie. Poking it gives you more cookies. Weird. u like?",
         "gives you a fortune cookie. It reads \"Why aren't you working on any projects idion?\"",
         "gives you a fortune cookie. It reads \"Give that special someone a compliment, tell trut\"",
@@ -67,6 +72,7 @@
         "http://i.imgur.com/z3EIPcI.jpg",
         "http://i.imgur.com/PGYReTy.jpg",
         "http://i.imgur.com/mGNwEyb.jpg",
+        "http://i.imgur.com/0sRl1Yy.gifv",
         "http://i.imgur.com/gBDyypM.jpg",
         "http://i.imgur.com/DLKwVHN.jpg",
         "http://i.imgur.com/paFD9aA.jpg",
@@ -78,6 +84,29 @@
         "http://i.imgur.com/WFYIePU.jpg",
         "http://i.imgur.com/X8FqpQm.jpg",
         "http://i.imgur.com/jIm6fZ3.jpg",
+        "http://i.imgur.com/FOGSv22.jpg",
+        "http://i.imgur.com/0BXf2kx.jpg",
+        "http://i.imgur.com/fMcpuie.jpg",
+        "http://i.imgur.com/EqqKZ0b.jpg",
+        "http://i.imgur.com/tos3aP9.jpg",
+        "http://i.imgur.com/zfaoxTF.jpg",
+        "http://i.imgur.com/kZrzBAM.jpg",
+        "http://i.imgur.com/pl2dxY5.jpg",
+        "http://i.imgur.com/3F9XaRq.jpg",
+        "http://i.imgur.com/euy1pDp.jpg",
+        "http://i.imgur.com/wJdP6DU.jpg",
+        "http://i.imgur.com/kmlh5zX.jpg",
+        "https://streamable.com/r7j6",
+        "https://i.imgur.com/Qsf5UUq.png",
+        "http://i.imgur.com/tNXdAH8.gif",
+        "http://i.imgur.com/Monn3x5.gif",
+        "http://i.imgur.com/YrAv2ye.jpg",
+        "http://i.imgur.com/H9av9AP.jpg",
+        "http://i.imgur.com/YQmKRkL.jpg",
+        "http://i.imgur.com/l3ULii7.jpg",
+        "http://i.imgur.com/RsSUO86.jpg",
+        "http://i.imgur.com/XCrJZt6.jpg",
+        "http://i.imgur.com/ZJxRu0k.jpg",
         "http://i.imgur.com/lcqlDsG.jpg",
         "http://i.imgur.com/doErF2U.jpg",
         "http://i.imgur.com/kPGb26s.jpg",
