--- a/lang/en.json
+++ b/lang/en.json
@@ -244,7 +244,7 @@
     "warning2": "\/me @%%NAME%%, you will be removed due to AFK soon if you don't respond.",
     "afkremove": "\/me @%%NAME%%, you have been removed for being afk for %%TIME%%. You were at position %%POSITION%%. Chat at least once every %%MAXIMUMAFK%% minutes if you want to play a song.",
     "caps": "\/me @%%NAME%%, unglue your capslock button please, idion.",
-    "askskip": "\/me @%%NAME%%, don't ask for skips, bichh kid.",
+    "askskip": "\/me @%%NAME%%, don't ask for skips, b1tchkid.",
     "spam": "\/me @%%NAME%%, please don't spam, nosen idion.",
     "roomadvertising": "\/me @%%NAME%%, don't post links to other rooms please, u piece of shit nosen kid.",
     "adfly": "\/me @%%NAME%%, please change your autowoot program. We suggest PlugCubed: http:\/\/plugcubed.net\/",
