--- a/lang/en.json
+++ b/lang/en.json
@@ -30,98 +30,111 @@
     ],
     
     "WTF": [
-        "http://i.imgur.com/yb4DObe.jpg",
-        "http://i.imgur.com/CVX1oke.jpg",
-        "http://i.imgur.com/i8t6tlI.jpg",
-        "http://i.imgur.com/lHo60Ci.jpg",
-        "http://i.imgur.com/vufjQDX.jpg",
-        "http://i.imgur.com/9riWRMU.jpg",
-        "http://i.imgur.com/QLwHSiV.jpg",
-        "http://i.imgur.com/m2fD7qP.jpg",
-        "http://i.imgur.com/x5FK2m3.jpg",
-        "http://i.imgur.com/t5p0a8v.jpg",
-        "http://i.imgur.com/ndnOLAF.jpg",
-        "http://i.imgur.com/EvZX21B.jpg",
-        "http://i.imgur.com/JbuikIY.jpg",
-        "http://i.imgur.com/PRbyFv5.jpg",
-        "http://i.imgur.com/vvZdgAD.jpg",
-        "http://i.imgur.com/jHkV1rh.jpg",
-        "http://i.imgur.com/PLcpiSu.jpg",
-        "http://i.imgur.com/7oYZoav.jpg",
-        "http://i.imgur.com/b5AEfAR.jpg",
-        "http://i.imgur.com/Mn8vGjI.jpg",
-        "http://i.imgur.com/L3XD9ZN.jpg",   
-        "http://i.imgur.com/FS9meMN.jpg",
-        "http://i.imgur.com/bqqleE2.jpg",
-        "http://i.imgur.com/40Tlz6i.jpg",
-        "http://i.imgur.com/XPTVYuX.jpg",
-        "http://i.imgur.com/reI5658.jpg",
-        "http://i.imgur.com/HqbiBxG.jpg",
-        "http://i.imgur.com/qm7KjB4.jpg",
-        "http://i.imgur.com/kQVjV3p.jpg",
-        "http://i.imgur.com/c4vQlur.jpg",
-        "http://i.imgur.com/tcMdEcb.jpg",
-        "http://i.imgur.com/gb7YwoU.jpg",
-        "http://i.imgur.com/ehZOAib.jpg",
-        "http://i.imgur.com/cwatvUu.jpg",
-        "http://i.imgur.com/UdLGGV4.jpg",
-        "http://i.imgur.com/2mFSZQw.jpg",
-        "http://i.imgur.com/SaUBGGH.jpg",
-        "http://i.imgur.com/TJmYLFy.jpg",
-        "http://i.imgur.com/0yzhuJU.jpg",
-        "http://i.imgur.com/z3EIPcI.jpg",
-        "http://i.imgur.com/PGYReTy.jpg",
-        "http://i.imgur.com/mGNwEyb.jpg",
-        "http://i.imgur.com/0sRl1Yy.gifv",
-        "http://i.imgur.com/gBDyypM.jpg",
-        "http://i.imgur.com/DLKwVHN.jpg",
-        "http://i.imgur.com/paFD9aA.jpg",
-        "http://i.imgur.com/bdjMCwG.jpg",
-        "http://i.imgur.com/Aj1IrW6.jpg",
-        "http://i.imgur.com/10FwfT6.jpg",
-        "http://i.imgur.com/bJs6T2L.jpg",
-        "http://i.imgur.com/1iZPWtG.jpg",
-        "http://i.imgur.com/WFYIePU.jpg",
-        "http://i.imgur.com/X8FqpQm.jpg",
-        "http://i.imgur.com/jIm6fZ3.jpg",
-        "http://i.imgur.com/FOGSv22.jpg",
-        "http://i.imgur.com/0BXf2kx.jpg",
-        "http://i.imgur.com/fMcpuie.jpg",
-        "http://i.imgur.com/EqqKZ0b.jpg",
-        "http://i.imgur.com/tos3aP9.jpg",
-        "http://i.imgur.com/zfaoxTF.jpg",
-        "http://i.imgur.com/kZrzBAM.jpg",
-        "http://i.imgur.com/pl2dxY5.jpg",
-        "http://i.imgur.com/3F9XaRq.jpg",
-        "http://i.imgur.com/euy1pDp.jpg",
-        "http://i.imgur.com/wJdP6DU.jpg",
-        "http://i.imgur.com/kmlh5zX.jpg",
-        "https://streamable.com/r7j6",
-        "http://i.imgur.com/eeiQg3B.gifv",
-        "http://i.imgur.com/pHtyAcA.gifv",
-        "https://i.imgur.com/Qsf5UUq.png",
-        "http://i.imgur.com/tNXdAH8.gif",
-        "http://i.imgur.com/Monn3x5.gif",
-        "http://i.imgur.com/YrAv2ye.jpg",
-        "http://i.imgur.com/H9av9AP.jpg",
-        "http://i.imgur.com/YQmKRkL.jpg",
-        "http://i.imgur.com/l3ULii7.jpg",
-        "http://i.imgur.com/RsSUO86.jpg",
-        "http://i.imgur.com/XCrJZt6.jpg",
-        "http://i.imgur.com/ZJxRu0k.jpg",
-        "http://i.imgur.com/lcqlDsG.jpg",
-        "http://i.imgur.com/doErF2U.jpg",
-        "http://i.imgur.com/kPGb26s.jpg",
-        "http://i.imgur.com/uCqHo56.gif",
-        "http://i.imgur.com/scdYpuX.jpg",
-        "http://i.imgur.com/wFDZGwI.jpg",
-        "http://i.imgur.com/L9sCaVq.jpg",
-        "http://i.imgur.com/Yq1XhBW.gifv",
-        "http://i.imgur.com/VrGtMOc.jpg",
-        "http://i.imgur.com/9Vj4xaj.gif",
-        "http://i.imgur.com/75Bdydi.gifv",
-        "http://i.imgur.com/hsMf9nE.jpg",
-        "http://i.imgur.com/0RGhy0B.gifv"
+        "WTF http://i.imgur.com/yb4DObe.jpg",
+        "WTF http://i.imgur.com/CVX1oke.jpg",
+        "WTF http://i.imgur.com/i8t6tlI.jpg",
+        "WTF http://i.imgur.com/lHo60Ci.jpg",
+        "WTF http://i.imgur.com/vufjQDX.jpg",
+        "WTF http://i.imgur.com/9riWRMU.jpg",
+        "WTF http://i.imgur.com/QLwHSiV.jpg",
+        "WTF http://i.imgur.com/m2fD7qP.jpg",
+        "WTF http://i.imgur.com/x5FK2m3.jpg",
+        "WTF http://i.imgur.com/t5p0a8v.jpg",
+        "WTF http://i.imgur.com/ndnOLAF.jpg",
+        "WTF http://i.imgur.com/EvZX21B.jpg",
+        "WTF http://i.imgur.com/JbuikIY.jpg",
+        "WTF http://i.imgur.com/PRbyFv5.jpg",
+        "WTF http://i.imgur.com/vvZdgAD.jpg",
+        "WTF http://i.imgur.com/jHkV1rh.jpg",
+        "WTF http://i.imgur.com/PLcpiSu.jpg",
+        "WTF http://i.imgur.com/7oYZoav.jpg",
+        "WTF http://i.imgur.com/b5AEfAR.jpg",
+        "WTF http://i.imgur.com/Mn8vGjI.jpg",
+        "WTF http://i.imgur.com/L3XD9ZN.jpg",   
+        "WTF http://i.imgur.com/FS9meMN.jpg",
+        "WTF http://i.imgur.com/bqqleE2.jpg",
+        "WTF http://i.imgur.com/40Tlz6i.jpg",
+        "WTF http://i.imgur.com/XPTVYuX.jpg",
+        "WTF http://i.imgur.com/reI5658.jpg",
+        "WTF http://i.imgur.com/HqbiBxG.jpg",
+        "WTF http://i.imgur.com/qm7KjB4.jpg",
+        "WTF http://i.imgur.com/kQVjV3p.jpg",
+        "WTF http://i.imgur.com/c4vQlur.jpg",
+        "WTF http://i.imgur.com/tcMdEcb.jpg",
+        "WTF http://i.imgur.com/gb7YwoU.jpg",
+        "WTF http://i.imgur.com/ehZOAib.jpg",
+        "WTF http://i.imgur.com/cwatvUu.jpg",
+        "WTF http://i.imgur.com/UdLGGV4.jpg",
+        "WTF http://i.imgur.com/2mFSZQw.jpg",
+        "WTF http://i.imgur.com/SaUBGGH.jpg",
+        "WTF http://i.imgur.com/TJmYLFy.jpg",
+        "WTF http://i.imgur.com/0yzhuJU.jpg",
+        "WTF http://i.imgur.com/z3EIPcI.jpg",
+        "WTF http://i.imgur.com/PGYReTy.jpg",
+        "WTF http://i.imgur.com/mGNwEyb.jpg",
+        "WTF http://i.imgur.com/0sRl1Yy.gifv",
+        "WTF http://i.imgur.com/gBDyypM.jpg",
+        "WTF http://i.imgur.com/DLKwVHN.jpg",
+        "WTF http://i.imgur.com/paFD9aA.jpg",
+        "WTF http://i.imgur.com/bdjMCwG.jpg",
+        "WTF http://i.imgur.com/Aj1IrW6.jpg",
+        "WTF http://i.imgur.com/10FwfT6.jpg",
+        "WTF http://i.imgur.com/bJs6T2L.jpg",
+        "WTF http://i.imgur.com/1iZPWtG.jpg",
+        "WTF http://i.imgur.com/WFYIePU.jpg",
+        "WTF http://i.imgur.com/X8FqpQm.jpg",
+        "WTF http://i.imgur.com/jIm6fZ3.jpg",
+        "WTF http://i.imgur.com/FOGSv22.jpg",
+        "WTF http://i.imgur.com/0BXf2kx.jpg",
+        "WTF http://i.imgur.com/fMcpuie.jpg",
+        "WTF http://i.imgur.com/EqqKZ0b.jpg",
+        "WTF http://i.imgur.com/tos3aP9.jpg",
+        "WTF http://i.imgur.com/zfaoxTF.jpg",
+        "WTF http://i.imgur.com/kZrzBAM.jpg",
+        "WTF http://i.imgur.com/pl2dxY5.jpg",
+        "WTF http://i.imgur.com/3F9XaRq.jpg",
+        "WTF http://i.imgur.com/euy1pDp.jpg",
+        "WTF http://i.imgur.com/wJdP6DU.jpg",
+        "WTF http://i.imgur.com/kmlh5zX.jpg",
+        "WTF https://streamable.com/r7j6",
+        "WTF http://i.imgur.com/eeiQg3B.gifv",
+        "WTF http://i.imgur.com/pHtyAcA.gifv",
+        "WTF https://i.imgur.com/Qsf5UUq.png",
+        "WTF http://i.imgur.com/tNXdAH8.gif",
+        "WTF http://i.imgur.com/Monn3x5.gif",
+        "WTF http://i.imgur.com/YrAv2ye.jpg",
+        "WTF http://i.imgur.com/H9av9AP.jpg",
+        "WTF http://i.imgur.com/YQmKRkL.jpg",
+        "WTF http://i.imgur.com/l3ULii7.jpg",
+        "WTF http://i.imgur.com/RsSUO86.jpg",
+        "WTF http://i.imgur.com/XCrJZt6.jpg",
+        "WTF http://i.imgur.com/ZJxRu0k.jpg",
+        "WTF http://i.imgur.com/lcqlDsG.jpg",
+        "WTF http://i.imgur.com/doErF2U.jpg",
+        "WTF http://i.imgur.com/kPGb26s.jpg",
+        "WTF http://i.imgur.com/uCqHo56.gif",
+        "WTF http://i.imgur.com/scdYpuX.jpg",
+        "WTF http://i.imgur.com/wFDZGwI.jpg",
+        "WTF http://i.imgur.com/L9sCaVq.jpg",
+        "WTF http://i.imgur.com/Yq1XhBW.gifv",
+        "WTF http://i.imgur.com/VrGtMOc.jpg",
+        "WTF http://i.imgur.com/9Vj4xaj.gif",
+        "WTF http://i.imgur.com/75Bdydi.gifv",
+        "WTF http://i.imgur.com/hsMf9nE.jpg",
+        "WTF http://i.imgur.com/ROKffXv.gifv",
+        "WTF http://i.imgur.com/dhj10DC.jpg",
+        "WTF http://i.imgur.com/Gdlkyj9.jpg",
+        "WTF http://i.imgur.com/wOOde0R.jpg",
+        "WTF http://i.imgur.com/LHubhkK.jpg",
+        "WTF http://i.imgur.com/yGLAfZj.png",
+        "WTF http://i.imgur.com/KLCPduE.jpg",
+        "WTF http://i.imgur.com/O5ccRr3.jpg",
+        "WTF http://i.imgur.com/AG53WlP.jpg",
+        "WTF http://i.imgur.com/0HjvcTL.jpg",
+        "WTF http://i.imgur.com/DN5AXRf.jpg",
+        "WTF http://i.imgur.com/QyRPmTC.jpg",
+        "WTF http://i.imgur.com/rEqvfbI.png",      
+        "WTF http://i.imgur.com/0RGhy0B.gifv"
     ],
     
      "babymonkeys": [
