--- a/lang/en.json
+++ b/lang/en.json
@@ -111,6 +111,15 @@
         "WTF http://i.imgur.com/ZJxRu0k.jpg",
         "WTF http://i.imgur.com/lcqlDsG.jpg",
         "WTF http://i.imgur.com/doErF2U.jpg",
+        "WTF http://i.imgur.com/9wysc87.jpg",
+        "WTF http://i.imgur.com/LExeK1J.jpg",
+        "WTF http://i.imgur.com/6FVV0kZ.jpg",
+        "WTF http://i.imgur.com/DPfkudf.jpg",
+        "WTF http://i.imgur.com/QkyVP6K.jpg",
+        "WTF http://i.imgur.com/nqUWkHX.jpg",
+        "WTF http://i.imgur.com/RUqN8Qf.jpg",
+        "WTF http://i.imgur.com/Jb87ICN.jpg",
+        "WTF http://i.imgur.com/RUqN8Qf.jpg",
         "WTF http://i.imgur.com/kPGb26s.jpg",
         "WTF http://i.imgur.com/uCqHo56.gif",
         "WTF http://i.imgur.com/scdYpuX.jpg",
