--- a/lang/en.json
+++ b/lang/en.json
@@ -150,6 +150,9 @@
     
      "babymonkeys": [
         "baby monkey saying hi https://vid.me/Qyth",
+        "CANDY!! baby monkey loves candy https://vid.me/26vu",
+        "greetings from baby monkey!! https://vid.me/pxlN",
+        "he bery fast https://vid.me/uHt8",
         "baby monkey eating!! https://vid.me/NbYg",
         "flake?! he no want flake :( https://vid.me/wejK",
         "he no like walnut :S https://vid.me/5HWQ",
