--- a/lang/en.json
+++ b/lang/en.json
@@ -247,8 +247,8 @@
     "greyuser": "Only bouncers and up can run a bot.",
     "bouncer": "Th bot can't move people when it's run as a bouncer.",
     "online": "\/me %%BOTNAME%% v%%VERSION%% online fens!",
-    "welcome": "\/me Welcome %%NAME%% fen",
-    "welcomeback": "\/me Welcome back, %%NAME%% fen",
+    "welcome": "\/me hey fen @%%NAME%%",
+    "welcomeback": "\/me welcome back fen @%%NAME%%",
     "songknown": "\/me @%%NAME%%, this song is in th DJ history fen.",
     "notavailable": "\/me @%%NAME%%, th song you played was not available fen.",
     "timelimit": "\/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
